test/files/neg/parse-opaque-parser.scala
package object opaqueFailures {
  class A opaque ()
}
