test/files/neg/parse-opaque-parser.check
parse-opaque-parser.scala:2: error: ';' expected but 'opaque' found.
  class A opaque ()
          ^
one error found